src/sphinx_breeze_theme/assets/styles/components/page-actions.css
.bz-page-actions {
  display: inline-flex;
  position: relative;
  margin-top: calc(var(--bz-title-1-font-size) / 2);
  border: 1px solid var(--bz-page-actions-border-color);
  border-radius: var(--bz-border-radius);

  @media (width > 64rem) {
    position: absolute;
    position-anchor: --bz-page-title;
    margin-top: -0.875rem;
    top: anchor(center);
    right: 0;
  }

  button {
    --bz-surface: var(--bz-page-actions-background);

    display: flex;
    align-items: center;
    gap: 0.25rem;
    padding: 0.35rem;
    background: none;
    border: none;
    border-radius: 0 var(--bz-border-radius) var(--bz-border-radius) 0;
    color: var(--bz-page-actions-color);
    font-family: var(--bz-page-actions-font-family);

    &:hover {
      --bz-surface: var(--bz-page-actions-background-hover);
    }

    &:focus {
      z-index: 1;
    }
  }

  > button {
    padding-inline: 0.625rem;
    font-size: var(--bz-page-actions-font-size);
    border-right: 1px solid var(--bz-page-actions-border-color);
    border-radius: var(--bz-border-radius) 0 0 var(--bz-border-radius);

    &:hover {
      color: var(--bz-page-actions-color-hover);
    }
  }

  .bz-dropdown {
    position: static;

    hr {
      margin-block: 0.5rem;
    }

    ul {
      left: 0;

      @media (width > 64rem) {
        right: 0;
        left: auto;
      }
    }

    svg {
      color: var(--bz-page-actions-icon-color);
      vertical-align: middle;
    }

    button::after {
      content: "";
      display: block;
      width: 1.15rem;
      height: 1.15rem;
      transform: rotate(90deg);
      background-color: currentColor;
      mask-image: var(--bz-icon-chevron);
    }

    &:hover button {
      color: var(--bz-page-actions-color-hover);
    }
  }

  .bz-page-actions-external::after {
    content: "";
    display: inline-block;
    vertical-align: middle;
    mask-image: var(--bz-icon-external-link);
    background-color: currentColor;
    opacity: 0.5;
    width: 1rem;
    height: 1rem;
    margin-top: -0.25rem;
    margin-left: 0.325rem;
  }

  @media (width > 64rem) {
    ~ section:first-of-type h1 {
      anchor-name: --bz-page-title;
      padding-right: 11rem;
    }
  }
}

